Changes since version 2.1.2
---------------------------

- Added new features to the Java mapping:

  - Structures, classes, and exceptions now have one-shot constructors.
    For example, for a class

      class Example {
          int i;
	  string s;
      };

    the following constructors are generated:

      public class Example extends Ice.ObjectImpl {
	  public Example() { /* ... */ }
	  public Example(int i, String s) { /* ... */ }
	  // ...
      }

    This allows you to construct a structure, class, or exception
    and supply values for the data members in a single statement,
    instead of having to assign to the members of a default-constructed
    instance.

    For derived exceptions and classes, the constructor expects values
    for all data members, including those of base exceptions or classes,
    in base-to-derived order of declaration.

Changes since version 2.1.1
---------------------------

- Fixed a bug with dynamic thread pools, where new threads were
  destroyed immediately after dispatch if <threadpool>.Size=1 and
  <threadpool>.SizeMax > 1.

- Added the configuration property Ice.Compression.Level to provide
  more control over the bzip2 algorithm used to compress Ice protocol
  messages.

Changes since version 2.1.0
---------------------------

- Modified the Ice marshaling engine so that references to Ice objects
  are released as soon as possible.

- Fixed a race condition that could cause a process to abort during
  shutdown.

- Added sequences of fixed-length elements to throughput demo.

- Fixed a bug that could cause an assert if connections could not be
  established in thread-per-connection mode.

- Added two new properties for controlling Active Connection
  Management (ACM). In prior releases ACM was governed by the property
  Ice.ConnectionIdleTime, which affected client- and server-side
  behavior. The new properties, Ice.ACM.Client and Ice.ACM.Server,
  now allow independent timeouts to be specified for client- and