@@ -69,6 +69,9 @@
                 <include name="EvictorStorage.ice" />
                 <include name="CatalogData.ice" />
             </fileset>
+            <fileset dir="${src.dir}/Freeze">
+                <include name="PingObject.ice" />
+            </fileset>
         </slice2java>
 
         <slice2freezej outputdir="${generated.dir}" dependencyfile="${generated.dir}/.depend.Freeze">
