@@ -38,7 +38,6 @@ exception DerivedPrinterException
 class Initial
 {
     Simple getSimple();
-    Object getPrinterAsObject();
     void getPrinter(out Printer impl, out Printer* proxy);
     Printer getDerivedPrinter();
     void throwDerivedPrinter() throws DerivedPrinterException;
